# llm-tycoon

./: .env.example  .gitignore  GAME_CONCEPT.md  README.md  docker-compose.prod.yml  docker-compose.yml  vercel.json
.claude/: launch.json
backend/: mix.exs
backend/config/: config.exs  dev.exs  runtime.exs  test.exs
backend/lib/backend/: application.ex  espionage.ex  leaderboard.ex
backend/lib/backend_web/: endpoint.ex
client/: package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
client/src/: main.tsx
client/src/bindings/: AchievementDef.ts  BuildingDef.ts  BuildingId.ts  ChatSource.ts  CostResource.ts  EffectKind.ts  EraDef.ts  EraId.ts  EventKind.ts  GameState.ts  PerkDef.ts  PerkEffect.ts  PermanentEffect.ts  PermanentUpgradeDef.ts  Resources.ts  UpgradeCategory.ts  UpgradeDef.ts  UpgradeEffect.ts
client/src/input/: InputManager.ts
deploy/: backend.Dockerfile  nginx.conf  web.conf
frontend/: index.html  package.json  tsconfig.app.json
frontend/src/: main.tsx
ml/: Dockerfile  main.py  pyproject.toml
ml/app/: main.py
ml/tests/: test_nano_transformer.py
server/: Cargo.toml
server/migrations/: 001_player_snapshots.sql
server/src/: main.rs  ml.rs  storage.rs
server/src/actors/: mod.rs  player.rs  registry.rs
server/src/game/: achievements.rs  buildings.rs  eras.rs  events.rs  formulas.rs  mod.rs  prestige.rs  reborn.rs  resources.rs  state.rs  upgrades.rs
server/src/game/data/: achievements.rs  buildings.rs  eras.rs  events.rs  mod.rs  perks.rs  permanents.rs  upgrades.rs
server/src/web/: mod.rs  player_channel.rs  router.rs
supabase/migrations/: 001_initial.sql
(+70 files in other folders)
